--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     },
     "devDependencies": {
         "axios": "^0.27",
+        "bootstrap-sass": "^3.4.3",
         "laravel-vite-plugin": "^0.5.0",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "vite": "^3.0.0"
+    },
+    "dependencies": {
+        "sass": "^1.54.4"
     }
 }
