--- a/package.json
+++ b/package.json
@@ -2,17 +2,27 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "watch_": "webpack --mode=development --config node_modules/laravel-mix/setup/webpack.config.js",
+        "watch": "NODE_ENV=development webpack --watch --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "hot": "NODE_ENV=development webpack-dev-server --hot --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
         "axios": "^0.27",
         "bootstrap-sass": "^3.4.3",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^0.5.0",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
+        "resolve-url-loader": "^5.0.0",
+        "sass-loader": "^12.6.0",
         "vite": "^3.0.0"
     },
     "dependencies": {
-        "sass": "^1.54.4"
+        "@fortawesome/fontawesome-free": "^6.1.2",
+        "bootstrap": "^5.2.0",
+        "laravel-mix": "^6.0.49",
+        "sass": "^1.54.4",
+        "watch": "^1.0.2"
     }
 }
